test/errors/type/collections/set/__bandnot3.yasl
echo collections.set().__bandnot(1, true)
