test/errors/type/collections/set/__bandnot3.yasl.err
TypeError: collections.set.__bandnot expected arg in position 1 to be of type set, got arg of type bool. (line 1)
